src/lexer/snapshots/tests__lexer::tests::lex_identifier.snap
---
created: "2019-06-25T20:05:13.203530Z"
creator: insta@0.8.1
source: src/lexer/mod.rs
expression: tokens
---
Ok(
    [
        Token {
            token_type: Ident(
                "a1234"
            ),
            token_pos: Range {
                start: Pos {
                    line: 0,
                    column: 0
                },
                end: Pos {
                    line: 0,
                    column: 5
                }
            }
        }
    ]
)
